--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
     <title>Document</title>
   </head>
 
-  <body>
-    <h1>Hello</h1>
+  <body ng-app="chatApp">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-resource/1.6.10/angular-resource.js"></script>
+    <script src="app.js"></script>
   </body>
 
 </html>
