create chat directive

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,18 @@
 
   <head>
     <title>Document</title>
+
   </head>
 
   <body ng-app="chatApp">
+    <div>
+      <chat></chat>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-resource/1.6.10/angular-resource.js"></script>
     <script src="app.js"></script>
+    <script src="controllers/chatController.js"></script>
+    <script src="directive/chat.js"></script>
   </body>
 
 </html>
